--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-image-file-resizer": "^0.4.8",
     "react-query": "^3.39.3",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
