--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ opencv-python==4.11.0.86
 ultralytics==8.3.70
 dill==0.3.9
 python-dotenv==1.0.1
-gunicorn==23.0.0
 azure-storage-blob==12.24.1
+gunicorn
